--- a/src/scss/elements/_home.scss
+++ b/src/scss/elements/_home.scss
@@ -4,10 +4,10 @@ $my-color: orange;
     max-width: 1700px;
     min-width: 1000px;
     height: 100%;
-    background-image: url('../89962db5e39bda0d53e10bfb6366efb1.png');
-    background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
+    // background-image: url('../89962db5e39bda0d53e10bfb6366efb1.png');
+    // background-size: cover;
+    // background-position: top;
+    // background-repeat: no-repeat;
     
 }
 
