--- a/src/scss/elements/_row.scss
+++ b/src/scss/elements/_row.scss
@@ -1,13 +1,34 @@
-.row {
-
+.row-container {
+    margin-left: 20px;
 }
 
 .row-posters {
     display: flex;
+    overflow-y: hidden;
+    //overflow-x: scroll;
+    padding: 20px;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .row-poster {
     object-fit: contain;
     width: 100%;
     max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms;
+
+    &:hover {
+        transform: scale(1.08);
+    }
+}
+
+.row-posterLarge {
+    max-height: 250px;
+
+    &:hover {
+        transform: scale(1.09);
+    }
 }
