--- a/src/scss/elements/_home.scss
+++ b/src/scss/elements/_home.scss
@@ -1,4 +1,4 @@
-$my-color: orange;
+//$my-color: orange;
 
 .home-main-container {
     max-width: 1700px;
@@ -11,6 +11,6 @@ $my-color: orange;
     
 }
 
-h1 {
-  color: $my-color;
-}
+// h1 {
+//   color: $my-color;
+// }
