--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,7 @@ body {
     background-color: #27282b;
     overflow-x: hidden;
     color: whitesmoke;
+    font-family: 'Poppins', sans-serif;
   }
 
 // :root {
