--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -1,12 +1,12 @@
 .banner {
     object-fit: contain;
-    height: 480px;
+    height: 460px;
 }
 
 .banner-contents {
     margin-left: 30px;
     padding-top: 140px;
-    height: 190px;
+   // height: 190px;
 }
 
 .banner-title {
@@ -45,10 +45,14 @@
     //border: 2px solid transparent;
 
     &:hover {
-        
         // border-radius: 30px;
         // border-width: 2px;
         // border-style: solid;
         background: linear-gradient(233.25deg,#5b4df6,#ff493b); //1;
     }
+}
+
+.banner-fadeBottom {
+    height: 8rem;
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.41), $main-app-color);    
 }
