--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -6,18 +6,22 @@
     justify-content: space-between;
     padding: 0.7rem 1.5rem;
 
-    height: 70px;
+    height: 130px;
     z-index: 1;
 
     transition-timing-function: ease-in;
     transition: all 0.5s;
 }
 
+
+//bar pojawiający się w trakcie scrollowania strony na dół
 .nav-black {
-    background-color: $main-app-color;
+    background-image: linear-gradient(180deg, black,  black, rgba(16, 15, 15, 1), rgba(42, 40, 40, 0.7), transparent);
 }
 
 .nav-logo {
+
+    margin-right: 1rem;
 
     font-size: 2.2rem;
     font-style: italic;
@@ -48,4 +52,38 @@
 
 .nav-hello {
     margin-right: 1rem;
+    margin-top: 0.6rem;
+}
+
+.nav-btns {
+    height: 2.2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 0.55rem;
+    padding-bottom: 0.6rem;
+
+    cursor: pointer;
+    outline: none;
+    border: none;
+
+    color: whitesmoke;
+    font-size: 1rem;
+    font-weight: 700;
+    //border-radius: 0.2vw;
+
+    margin-top: 0.5rem;
+
+    background-color: rgba(21, 21, 42, 0.3);
+    
+    border-radius: 30px;
+    transition: all 0.7s;
+    //border: 2px solid transparent;
+
+    &:hover {
+        // border-radius: 30px;
+        // border-width: 2px;
+        // border-style: solid;
+        background: linear-gradient(233.25deg,#4d3fe9,#f13d30); //1;
+        color: white;
+    }
 }
