adding footer styling p1

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,6 +5,8 @@
 @import './elements/barNavigation';
 @import './elements/row';
 @import './elements/banner';
+@import './elements/search';
+@import './elements/footer';
 
 
 
