--- a/src/scss/elements/_row.scss
+++ b/src/scss/elements/_row.scss
@@ -16,9 +16,11 @@
 .row-poster {
     object-fit: contain;
     width: 100%;
-    max-height: 100px;
+    max-height: 180px;
     margin-right: 10px;
     transition: transform 450ms;
+
+    border-radius: 10px;
 
     &:hover {
         transform: scale(1.08);
@@ -26,7 +28,8 @@
 }
 
 .row-posterLarge {
-    max-height: 250px;
+    max-height: 370px;
+    border-radius: 20px;
 
     &:hover {
         transform: scale(1.09);
