--- a/src/scss/elements/_row.scss
+++ b/src/scss/elements/_row.scss
@@ -5,7 +5,7 @@
 .row-posters {
     display: flex;
     overflow-y: hidden;
-    //overflow-x: scroll;
+    overflow-x: scroll;
     padding: 20px;
 
     &::-webkit-scrollbar {
@@ -13,10 +13,15 @@
     }
 }
 
+.scroll-moz {
+    scrollbar-width: none;
+}
+
 .row-poster {
     object-fit: contain;
-    width: 100%;
-    max-height: 180px;
+    
+    height: 180px;
+    max-width: 100%;
     margin-right: 10px;
     transition: transform 450ms;
 
@@ -28,7 +33,7 @@
 }
 
 .row-posterLarge {
-    max-height: 370px;
+    height: 370px;
     border-radius: 20px;
 
     &:hover {
