--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -55,6 +55,30 @@
     flex-direction: column;
 }
 
+// -----------animacja ikon social media --------------------------------
+
+.footr-socialIcon-spin {
+
+    cursor: pointer;
+
+    &:hover { 
+        animation: animacja 2s ease 0.2s infinite alternate none;
+        //animation-play-state:running; 
+    }
+}
+
+@keyframes animacja {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+      fill: rgb(0, 255, 255);
+    }
+}
+
+// --------------------------------------------------------------------
+
 .footer-copyright {
     padding-top: 2rem;
     padding-bottom: 1.5rem;
@@ -68,4 +92,5 @@
         -webkit-text-fill-color: transparent;
     }
 }
+
 
