--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -13,6 +13,8 @@
     font-size: 3rem;
     font-weight: 700;
     padding-bottom: 0.3rem;
+    text-shadow: 1px 1px 5px black;
+    
 }
 
 .banner-description {
@@ -23,7 +25,7 @@
     font-weight: 600;
     max-width: 360px;
     height: 150px;
-
+    text-shadow: 1px 1px 6px black;
 }
 
 .banner-btn {
