--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -18,15 +18,18 @@
 .nav-black {
     background-image: linear-gradient(180deg, black,  black, rgba(16, 15, 15, 1), rgba(42, 40, 40, 0.7), transparent);
 }
+////
 
 .nav-logo {
-
     margin-right: 1rem;
 
     font-size: 2.2rem;
     font-style: italic;
 
+    text-shadow: 1px 1px 2px black;
+
     span {
+        text-shadow: 0 0 0 transparent;
         background: -webkit-linear-gradient(233.25deg,#5b4df6,#ff493b);
         background-clip: text;
         -webkit-background-clip: text;
@@ -53,6 +56,7 @@
 .nav-hello {
     margin-right: 1rem;
     margin-top: 0.6rem;
+    text-shadow: 1px 1px 2px black;
 }
 
 .nav-btns {
