--- a/src/scss/elements/_row.scss
+++ b/src/scss/elements/_row.scss
@@ -2,6 +2,10 @@
     margin-left: 20px;
 }
 
+.row-title {
+    text-shadow: 1px 1px 2px black;
+}
+
 .row-posters {
     display: flex;
     overflow-y: hidden;
