adding carousel - its alive!!

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -8,6 +8,7 @@
 @import './elements/search';
 @import './elements/footer';
 @import './elements/myList';
+@import './elements/singleImageInRow';
 
 
 
