--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -22,7 +22,10 @@
     margin-right: 10px;
     transition: transform 450ms;
 
-    border-radius: 10px;
+    border-radius: 12px;
+
+    overflow: hidden;
+    position: relative;  //!!!!!!!!!!!!!!!!!!!
 
     &:hover {
         transform: scale(1.07);
@@ -33,7 +36,67 @@
     height: 475px;
     border-radius: 20px;
 
+    overflow: hidden;
+    position: relative;  //!!!!!!!!!!!!!!!!!!!
+
     &:hover {
-        transform: scale(1.11);
+        transform: scale(1.08);
     }
+}
+
+.single-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.single-imageLarge {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.single-image-hover {
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    right: 0;
+    position: absolute;
+    background: rgba(26, 42, 78, 0.258);
+    backdrop-filter: blur(2px);
+    border-radius: 12px;
+    transition: 1s;
+
+}
+
+.single-image-hoverLarge {
+    width: 100%;
+    height: 100%;
+    top: -100;
+    right: 0;
+    position: absolute;
+    background: rgba(26, 42, 78, 0.258);
+    backdrop-filter: blur(2px);
+    border-radius: 20px;
+    transition: 1;
+}
+
+.row-poster:hover .single-image-hover {
+    top: 0;
+}
+
+.image-hover-title {
+
+}
+
+.image-hover-type-date {
+
+}
+
+.image-hover-overview {
+
+    font-weight: 400;
+    font-size: 12px;
 }
