--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -14,6 +14,7 @@
     scrollbar-width: none;
 }
 
+//kontener ze zdjeciem i hoverem
 .row-poster {
     object-fit: contain;
     
@@ -32,6 +33,7 @@
     }
 }
 
+//kontener ze zdjeciem i hoverem
 .row-posterLarge {
     height: 475px;
     border-radius: 20px;
@@ -58,29 +60,39 @@
     border-radius: 20px;
 }
 
+//div z hoverem
 .single-image-hover {
     width: 100%;
     height: 100%;
     top: -100%;
     right: 0;
     position: absolute;
-    background: rgba(26, 42, 78, 0.258);
+    background: rgba(26, 42, 78, 0.668);
     backdrop-filter: blur(2px);
     border-radius: 12px;
     transition: 1s;
 
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+
 }
 
+//div z hoverem
 .single-image-hoverLarge {
     width: 100%;
     height: 100%;
-    top: -100;
+    top: -100%;
     right: 0;
     position: absolute;
-    background: rgba(26, 42, 78, 0.258);
+    background: rgba(26, 42, 78, 0.668);
     backdrop-filter: blur(2px);
     border-radius: 20px;
     transition: 1;
+
+    padding: 17px;
+    display: flex;
+    flex-direction: column;
 }
 
 .row-poster:hover .single-image-hover {
@@ -88,15 +100,64 @@
 }
 
 .image-hover-title {
-
+    margin-bottom: 7px;
+    line-height: 17px;
 }
 
 .image-hover-type-date {
+    font-size: 12px;
 
+    span {
+        font-style: italic;
+        font-weight: 700;
+        color: rgb(220, 20, 110);
+    }
 }
 
 .image-hover-overview {
-
     font-weight: 400;
     font-size: 12px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.single-hover-overviewLarge {
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.image-hover-btn {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    color: whitesmoke;
+    font-size: 0.9rem;
+    font-weight: 700;
+    background: #ff493b;
+
+    margin-top: 3px;
+    width: 130px;
+
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    border-radius: 10px;
+    transition: background-color 1s ease-in-out;
+
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.75);
+
+    float: right;
+    
+    margin-bottom: 5px;
+    margin-right: 15px;
+
+    &:hover {
+        background-color: #5b4df6; //1;
+    }
 }
