--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -66,6 +66,7 @@
     height: 100%;
     top: -100%;
     right: 0;
+    left: 0;
     position: absolute;
     background: rgba(26, 42, 78, 0.668);
     backdrop-filter: blur(2px);
@@ -84,6 +85,8 @@
     height: 100%;
     top: -100%;
     right: 0;
+    left: 0;
+    bottom: 0;
     position: absolute;
     background: rgba(26, 42, 78, 0.668);
     backdrop-filter: blur(2px);
@@ -155,13 +158,17 @@
     margin-bottom: 5px;
     margin-right: 15px;
 
+    -webkit-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
+
     &:hover {
         background-color: #9f34c6; //1;
     }
 
     &:active {
-        -webkit-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
-        -moz-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
-        box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
         }
 }
