--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -7,20 +7,50 @@
 }
 
 .search-container {
-    width: 95%;
+    width: 92%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     
-    margin-top: 350px;
-    
+    margin-top: 250px;
 }
 
 .search-input {
-
    width: 100%;
-   height: 200px;
+   height: 170px;
+   padding-top: 20px;
+
+   border: 2px solid orange;  //////////////////////////////////
 
     input {
-        width: 90%;
+        width: 30%;
+        height: 68px;
+        margin-left: 20px;
+
+        padding: 10px 0;
+        box-sizing: border-box;
+
+        border: none;
+        border-bottom: 2px solid white;
+        background-color: $main-app-color;
+
+        font-size: 35px;
+        line-height: 50px;
+        font-family: 'Poppins', sans-serif;
+        color: whitesmoke;
+
+        transition: width 0.8s ease-in-out;
     }
+
+    input:focus {
+        width: 92%;
+        outline: none;
+        border-bottom: 2px solid white;
+    }
+    
+}
+
+.search-results-container {
+    border: 2px solid red;  /////////////////////
+    margin-right: 20px;
 }
