single image in row fix color btn

--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -139,7 +139,7 @@
     color: whitesmoke;
     font-size: 13.5px;
     font-weight: 700;
-    background: #ff493b;
+    background: #fb5f34;
 
     margin-top: 3px;
     width: 110px;
