single card search component added

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,6 +9,7 @@
 @import './elements/footer';
 @import './elements/myList';
 @import './elements/singleImageInRow';
+@import './elements/singleCardSearch';
 
 
 
