--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -19,8 +19,7 @@
    width: 100%;
    height: 170px;
    padding-top: 20px;
-
-   border: 2px solid orange;  //////////////////////////////////
+   margin-bottom: 80px;
 
     input {
         width: 30%;
@@ -47,10 +46,10 @@
         outline: none;
         border-bottom: 2px solid white;
     }
-    
 }
 
 .search-results-container {
-    border: 2px solid red;  /////////////////////
-    margin-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
