adding footer in search page

--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -52,10 +52,11 @@
 }
 
 .card-title {
-    margin-top: 6px;
+    margin-top: 2px;
     margin-bottom: 6px;
     font-size: 15px;
     padding-left: 3px;
+    line-height: 18px;
 }
 
 .card-description {
