--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -1,6 +1,6 @@
 .search-main {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,14 +12,14 @@
     display: flex;
     flex-direction: column;
     
-    margin-top: 250px;
+    margin-top: 190px;
 }
 
 .search-input {
    width: 100%;
    height: 170px;
-   padding-top: 20px;
-   margin-bottom: 80px;
+   //padding-top: 20px;
+   margin-bottom: 40px;
 
     input {
         width: 30%;
