adding text in empty search in search page

--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -31,6 +31,7 @@
     background-color:whitesmoke;
     border-radius: 8px;
     text-align: center;
+    margin-bottom: 7px;
 
     p {
         font-weight: 700;
@@ -66,5 +67,6 @@
     span {
         color: rgb(220, 20, 110);
         font-weight: bold;
+        font-style: italic;
     }
 }
