--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     
-    margin-top: 190px;
+    margin-top: 170px;
 }
 
 .search-input {
@@ -52,4 +52,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.search-empty-results {
+    margin-bottom: 30px;
 }
