--- a/src/scss/elements/_myList.scss
+++ b/src/scss/elements/_myList.scss
@@ -1,6 +1,6 @@
 .mylist {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,16 +8,12 @@
 }
 
 .mylist-lettering {
-    width: 600px;
+    width: 90%;
     text-align: center;
-    padding-top: 30px;
+    padding-top: 150px;
+    border: 1px solid red;
     h2 {
         padding-bottom: 30px;
         font-weight: 400;
     }
-}
-
-.mylist-image {
-    width: 600px;
-    border-radius: 30px;
 }
