--- a/src/scss/elements/_myList.scss
+++ b/src/scss/elements/_myList.scss
@@ -1,19 +1,41 @@
 .mylist {
     width: 100vw;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-right: 55px;
 }
 
 .mylist-lettering {
     width: 90%;
+    height: 100%;
     text-align: center;
     padding-top: 150px;
-    border: 1px solid red;
-    h2 {
+    padding-bottom: 30px;   
+        h1 {
         padding-bottom: 30px;
-        font-weight: 400;
     }
+}
+
+.mylist-main-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+}
+
+.mylist-films-container {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mylist-empty-list {
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 56px;
+    text-align: center;
 }
