--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -52,6 +52,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-right: 35px;
 }
 
 .search-empty-results {
