fixing btns part1

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,7 @@
 @import "generic/_reset.scss";
 
 @import './settings/colors';
+@import './settings/buttons';
 @import './elements/home';
 @import './elements/barNavigation';
 @import './elements/row';
