--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -34,7 +34,8 @@
     border: none;
     color: whitesmoke;
     font-size: 0.9rem;
-    font-weight: 700;
+    line-height: 1rem;
+    font-weight: 500;
     //border-radius: 0.2vw;
     padding-left: 2rem;
     padding-right: 2rem;
