--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -1,7 +1,8 @@
 .card-main {
     width: 220px;
     //background-color: rgba(11, 11, 13, 0.481);
-    background-color: rgba(16, 27, 51, 0.419);
+    // background-color: rgba(16, 27, 51, 0.419);
+    background-color: $backgroundcolor-btns-navbar;
     margin-bottom: 30px;
     margin-left: 10px;
     margin-right: 10px;
