--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -1,2 +1,12 @@
 
 $main-app-color: #27282b;
+
+//colors in logo linear gradient
+$logocolor-one: #ff493b;
+$logocolor-second: #5b4df6;
+
+$backgroundcolor-btns-banner: rgba(18, 18, 37, 0.5);
+$backgroundcolor-btns-navbar: rgba(21, 21, 42, 0.3);
+
+//linear gradients background colors like in footer
+$background-linearcolors: -webkit-linear-gradient(233.25deg,#5b4df6,#ff493b);
