--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -138,43 +138,7 @@
 }
 
 .image-hover-btn {
-    cursor: pointer;
-    outline: none;
-    border: none;
-    color: whitesmoke;
-    font-size: 13.5px;
-    font-weight: 700;
-    background: #fb5f34;
-
-    margin-top: 3px;
-    //min-width: 50px;
-
-    padding-left: 11px;
-    padding-right: 11px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    border-radius: 50px;
-
-    transition: background-color 0.5s ease-in-out;
-
-
-    margin-bottom: 5px;
-    
-
-    -webkit-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
-    -moz-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
-    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
-
-    &:hover {
-        background-color: #9f34c6; //1;
-    }
-
-    &:active {
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-        }
+    @include btnsSecondary();
 }
 
 .single-img-btn-one {
