using global context to add movies to mylist from rows

--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -139,6 +139,10 @@
 
 .image-hover-btn {
     @include btnsSecondary();
+
+    &:disabled {
+        background-color: rgb(180, 179, 179);
+    }
 }
 
 .single-img-btn-one {
