--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -95,7 +95,7 @@
     margin-right: 5px;
     margin-bottom: 10px;
     &:disabled {
-        background-color: rgb(180, 179, 179);
+        background-color: rgba(148, 146, 146, 0.716);
     }
 }
 
