--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -58,10 +58,26 @@
     margin-right: 1rem;
 }
 
+// @keyframes hello {
+//     from {
+//         transform: rotateY(0deg);
+//       }
+//       to {
+//         transform: rotateY(360deg);
+//       }
+//   }
+
 .nav-hello {
     margin-right: 1rem;
     margin-top: 0.6rem;
     text-shadow: 1px 1px 2px black;
+
+    // animation-name: hello;
+    // animation-duration: 1.5s;
+    // //animation-delay: 2s;
+    // animation-timing-function: ease-in-out;
+    // animation-iteration-count: 2;
+
 }
 
 .nav-btns {
