--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -63,7 +63,7 @@
     cursor: pointer;
 
     &:hover { 
-        animation: animacja 2s ease 0.2s infinite alternate none;
+        animation: animacja 2s ease 0.1s infinite alternate none;
         //animation-play-state:running; 
         
     }
@@ -74,9 +74,8 @@
       transform: rotate(0deg);
     }
     to {
-      transform: rotate(360deg);
+      transform: rotate(360deg) scale(1.30);
       fill: rgb(217, 255, 0);
-      
     }
 }
 
