--- a/src/scss/settings/_buttons.scss
+++ b/src/scss/settings/_buttons.scss
@@ -1,12 +1,13 @@
 
 //secondary buttons
 @mixin btnsSecondary() {
+    font-family: 'Poppins', sans-serif;
     cursor: pointer;
     outline: none;
     
     color: whitesmoke;
-    font-size: 0.9rem;
-    line-height: 1rem;
+    font-size: 0.8rem;
+    line-height: 0.9rem;
     font-weight: 500;
 
     background: transparent;
