--- a/src/scss/elements/_row.scss
+++ b/src/scss/elements/_row.scss
@@ -1,11 +1,14 @@
 .row-container {
+    width: 100%;
     margin-left: 20px;
     padding-top: 0.7rem;
 }
 
 .row-title {
     text-shadow: 1px 1px 2px black;
+    //padding-left: 7px;
 }
+
 
 
 
