--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -1,9 +1,9 @@
 .row-posters {
-    width: 100vw;
+    width: 100%;
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 25px;
+    padding: 25px 2px;
 
     &::-webkit-scrollbar {
         display: none;
@@ -20,10 +20,13 @@
     
     height: 183px;
     max-width: 100%;
-    margin-right: 10px;
+    
     transition: transform 450ms;
 
     border-radius: 12px;
+
+    margin-right: 10px;
+    margin-left: 10px;
 
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
@@ -38,6 +41,8 @@
     height: 475px;
     border-radius: 20px;
 
+    margin-right: 14px;
+    margin-left: 14px;
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
 
