adding content modal with movie descripsion for all movies in app

--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -28,6 +28,10 @@
     text-shadow: 1px 1px 6px black;
 }
 
+.banner-btns {
+    display: flex;
+}
+
 .banner-btn {
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
