--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,6 +11,7 @@
 @import './elements/myList';
 @import './elements/singleImageInRow';
 @import './elements/singleCardSearch';
+@import './elements/contentModal';
 
 
 
