adding CreditsModal component

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -12,6 +12,7 @@
 @import './elements/singleImageInRow';
 @import './elements/singleCardSearch';
 @import './elements/contentModal';
+@import './elements/modalCredits';
 
 
 
