--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -1,6 +1,6 @@
 .modal-container {
     display: flex;
-    padding: 10px;
+    //padding: 10px;
     justify-content: center;
 }
 
@@ -47,7 +47,7 @@
 
 .modal-description {
     font-weight: 400;
-    padding: 10px;
+    padding: 15px;
     text-align: justify;
 }
 
