--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -128,6 +128,7 @@
     font-size: 12px;
     margin-top: 5px;
     margin-bottom: 5px;
+    text-align: justify;
 }
 
 .single-hover-overviewLarge {
@@ -135,6 +136,7 @@
     font-size: 14px;
     margin-top: 10px;
     margin-bottom: 15px;
+    text-align: justify;
 }
 
 .btn-div-hover {
