--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -1,18 +1,35 @@
 .modal-container {
     display: flex;
     //padding: 10px;
-    justify-content: center;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    @media (max-width: 575px) {
+        
+    }
+
+    @media (max-width: 575px) {
+        
+    }
 }
 
-.modal-img-div {
-    width: 50%;
 
-    img {
-      max-width: 300px;
-      max-height: 100%;
-      object-fit: contain;
-    }
-    
+
+.modal-img-upright {
+    object-fit: contain;
+
+}
+
+.modal-img-horizontally {
+    object-fit: contain;
+    display: none;
+
 }
 
 .modal-no-image {
@@ -21,10 +38,12 @@
 }
 
 .modal-main-content {
-    max-width: 50%;
     margin: 0 30px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .modal-main-title {
@@ -33,24 +52,44 @@
 
 .modal-year {
     font-weight: 400;
+}
 
+.modal-year-type {
+    color: rgb(220, 20, 110);
+    padding: 0;
+    font-weight: 600;
+}
+
+.modal-year-genres {
+    padding-left: 15px;
+    font-style: italic;
+}
+
+.modal-votes {
+    font-weight: 400;
+    margin-top: 10px;
     span {
-        padding: 0 20px;
+        font-weight: 700;
+        background: -webkit-linear-gradient(233.25deg,#5b4df6,#ff493b);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
-    
 }
 
 .modal-description-container {
     background-color: $backgroundcolor-btns-navbar;
     margin: 10px 0;
+    border-radius: 15px;
 }
 
 .modal-description {
     font-weight: 400;
-    padding: 15px;
+    padding: 20px 18px;
     text-align: justify;
 }
 
 .modal-yt-btn {
-    background-color: $logocolor-one;
+    bottom: 0;
 }
+
