--- a/src/scss/elements/_modalCredits.scss
+++ b/src/scss/elements/_modalCredits.scss
@@ -1,6 +1,11 @@
-// .credits-container {
-//     //display: block;
-// }
+.credits-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
 
 .credits-person {
     display: flex;
@@ -34,6 +39,6 @@
 
 .credits-actor-name {
     text-align: center;
-    padding-bottom: 6px;
-    padding-top: 1px;
+    padding-bottom: 3px;
+    padding-top: 2px;
 }
