--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -95,7 +95,8 @@
     margin-right: 5px;
     margin-bottom: 10px;
     &:disabled {
-        background-color: rgba(148, 146, 146, 0.716);
+        background-color: $btn-disabled-backgroundcolor;
+        //rgba(148, 146, 146, 0.716)
     }
 }
 
