--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -10,17 +10,25 @@
 .footer-container {
     display: flex;
     margin-top: 40px;
+    
+    @media screen and (max-width: 500px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .footer-logos {
     margin-left: 2em;
     padding-top: 3em;
+    @media screen and (max-width: 500px) {
+        text-align: center;
+    }
 }
 
 .footer-logo-TMDB {
     fill: url(#MyGradient);
     -webkit-fill: url(#MyGradient);
-
     margin-bottom: 20px;
 }
 
@@ -43,6 +51,10 @@
     font-size: 0.8rem;
     width: 80vw;
     text-align: center;
+
+    @media screen and (max-width: 500px) {
+        padding-top: 2em;
+    }
 }
 
 
@@ -54,6 +66,17 @@
 
     display: flex;
     flex-direction: column;
+    @media screen and (max-width: 500px) {
+        flex-direction: row;
+        justify-content: center;
+
+    }
+}
+
+.icon-insta {
+    @media screen and (max-width: 500px) {
+        margin: 0 30px;
+    }
 }
 
 // -----------animacja ikon social media --------------------------------
