--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -61,7 +61,7 @@
     flex-wrap: wrap;
 }
 
-
+//-------------- animation for Hello -----------------------
 
 @keyframes hello {
     from {
@@ -82,8 +82,9 @@
     animation-delay: 2s;
     animation-timing-function: ease-in-out;
     // animation-iteration-count: 2;
-
 }
+
+//--------------------------------------------------------
 
 .nav-btns {
     font-family: 'Poppins', sans-serif;
