--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -39,17 +39,20 @@
         color: whitesmoke;
 
         transition: width 0.8s ease-in-out;
+
+        @media screen and (max-width: 900px) {
+            width: 60%;
+        }
+        @media screen and (max-width: 430px) {
+            font-size: 25px;
+        }
     }
 
     input:focus {
-        width: 92%;
+        width: 82%;
         outline: none;
         border-bottom: 2px solid white;
-    }
-    input:active {
-        width: 92%;
-        outline: none;
-        border-bottom: 2px solid white;
+        background-color: $main-app-color;
     }
 }
 
@@ -62,11 +65,15 @@
 
 .search-empty-results {
     margin-bottom: 30px;
+    text-align: center;
 }
 
-// input:-internal-autofill-selected {
-//     appearance: none;
-//     background-color: #27282b !important;
-//     background-image: none !important;
-//     color: whitesmoke !important;
-// }
+
+//prevents autofil styles in chrome browser
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    color-scheme: dark;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0), inset 0 0 0 100px #27282b;
+    font-size: 35px;
+  }
