styling btns for current page

--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -116,7 +116,7 @@
         // border-radius: 30px;
         // border-width: 2px;
         // border-style: solid;
-        background: linear-gradient(233.25deg,#4d3fe9,#f13d30); //1;
+        background-image: linear-gradient(233.25deg,#4d3fe9,#f13d30); //1;
         color: white;
     }
 }
