--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -145,6 +145,7 @@
     font-size: 15px;
     span {
         font-weight: 700;
+        font-size: 16px;
         background: -webkit-linear-gradient(233.25deg,#5b4df6,#ff493b);
         background-clip: text;
         -webkit-background-clip: text;
