--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -1,7 +1,7 @@
 .modal-container {
     display: flex;
     justify-content: space-between;
-    //padding: 10px;
+    
     height: 100%;
     width: 100%;
     overflow-y: scroll;
@@ -14,6 +14,10 @@
     @media screen and (max-width: 812px) {
         flex-direction: column;
         justify-content: space-between;
+    }
+
+    @media screen and (min-width: 1600px) {
+        padding: 20px;
     }
 }
 
@@ -93,6 +97,10 @@
 
     @media screen and (max-width: 812px) {
         margin: 0;
+    }
+
+    @media screen and (min-width: 1600px) {
+        margin: 0 50px;
     }
 }
 
@@ -180,13 +188,13 @@
     text-align: justify;
     font-size: 15px;
 
-    @media screen and (min-width: 813px) and (max-width: 1040px){ 
-        font-size: 12px;
-    }
-
     @media screen and (max-width: 812px) {
         padding: 10px 8px;
         font-size: 9px;
+    }
+
+    @media screen and (min-width: 813px) and (max-width: 1040px){ 
+        font-size: 12px;
     }
 }
 
