--- a/src/scss/elements/_barNavigation.scss
+++ b/src/scss/elements/_barNavigation.scss
@@ -1,6 +1,6 @@
 .nav-main-container {
     position: fixed;  //
-    top: 0;           // dzięki temu nachodzi na banner
+    top: 0;           // thanks to this, it overlaps the banner
     width: 100vw;
     display: flex;
     justify-content: space-between;
@@ -14,7 +14,7 @@
 }
 
 
-//bar pojawiający się w trakcie scrollowania strony na dół
+//bar that appears when scrolling down the page
 .nav-black {
     background-image: linear-gradient(180deg, black,  black, rgba(16, 15, 15, 1), rgba(42, 40, 40, 0.7), transparent);
 }
@@ -45,7 +45,6 @@
 .nav-left-icons {
     display: flex;
     flex-wrap: wrap;
-    
 }
 
 .nav-left-icon {
