--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -1,4 +1,3 @@
-
 .footer {
     height: 250px;
     width: 100vw;
@@ -21,6 +20,7 @@
 .footer-logos {
     margin-left: 2em;
     padding-top: 3em;
+
     @media screen and (max-width: 500px) {
         text-align: center;
     }
@@ -57,9 +57,7 @@
     }
 }
 
-
 .footer-socialIcons {
-    //color: #9527b1;
     width: 140px;
     //padding-left: 10px;
     padding-top: 40px;
@@ -69,7 +67,6 @@
     @media screen and (max-width: 500px) {
         flex-direction: row;
         justify-content: center;
-
     }
 }
 
@@ -79,16 +76,14 @@
     }
 }
 
-// -----------animacja ikon social media --------------------------------
+// -----------animation of social media icons --------------------------------
 
 .footr-socialIcon-spin {
-
     cursor: pointer;
 
     &:hover { 
         animation: animacja 2s ease 0.1s infinite alternate none;
         //animation-play-state:running; 
-        
     }
 }
 
