--- a/src/scss/elements/_modalCredits.scss
+++ b/src/scss/elements/_modalCredits.scss
@@ -57,7 +57,8 @@
     max-width: 90px;
     text-align: center;
     padding-bottom: 3px;
-    padding-top: 2px;
+    padding-top: 3px;
+    line-height: 14px;
 
     @media screen and (max-width: 812px) {
         font-size: 9px;
