--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -5,10 +5,10 @@ $main-app-color: #27282b;
 $logocolor-one: #ff493b;
 $logocolor-second: #5b4df6;
 
+//colors for buttons
 $backgroundcolor-btns-banner: rgba(18, 18, 37, 0.5);
 $backgroundcolor-btns-navbar: rgba(21, 21, 42, 0.3);
 $btn-disabled-backgroundcolor: rgba(180, 179, 179, 0.405);
 
-//linear gradients background colors like in footer
+//linear gradients background colors - like in footer
 $background-linearcolors: -webkit-linear-gradient(233.25deg,#5b4df6,#ff493b);
-
