--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -74,11 +74,13 @@
     display: none;
 
     p {
-        margin: 20px 15px;
+        margin: 0 15px;
+        margin-top: 50px;
+        margin-bottom: 30px;
         text-align: center;
     }
     h2 {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
         margin-left: 30px;
         margin-right: 30px;
     }
@@ -158,6 +160,10 @@
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+
+        @media screen and (max-width: 812px) { 
+            font-size: 10px;
+        }
     }
     
     @media screen and (max-width: 812px) { 
