--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -1,4 +1,4 @@
-//also here are classes for SingleCardMyList and MovieControls
+//also here are classes for SingleCardMyList and MovieControls components
 
 .card-main {
     width: 220px;
@@ -77,7 +77,8 @@
 .card-description {
     font-size: 12px;
     margin-bottom: 6px;
-     padding-left: 3px;
+    padding-left: 3px;
+
     span {
         color: rgb(220, 20, 110);
         font-weight: bold;
@@ -100,7 +101,7 @@
     }
 }
 
-//MovieControls ----------------------------------------------------------
+//MovieControls component ----------------------------------------------------------
 .moviecontrols-main {
     //height: 3rem;
     // width: 100%;
