--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -14,7 +14,7 @@
     scrollbar-width: none;
 }
 
-//kontener ze zdjeciem i hoverem
+//div with image and hover
 .row-poster {
     object-fit: contain;
     
@@ -25,8 +25,8 @@
 
     border-radius: 12px;
 
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 9px;
+    margin-left: 9px;
 
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
@@ -36,13 +36,13 @@
     }
 }
 
-//kontener ze zdjeciem i hoverem
+//div with image and hover
 .row-posterLarge {
     height: 475px;
     border-radius: 20px;
 
-    margin-right: 14px;
-    margin-left: 14px;
+    margin-right: 13px;
+    margin-left: 13px;
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
 
@@ -65,7 +65,7 @@
     border-radius: 20px;
 }
 
-//div z hoverem
+//div with hoverem
 .single-image-hover {
     width: 100%;
     height: 100%;
@@ -81,10 +81,9 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-
 }
 
-//div z hoverem
+//div with hoverem
 .single-image-hoverLarge {
     width: 100%;
     height: 100%;
@@ -105,9 +104,9 @@
 
 .row-poster:hover .single-image-hover {
     top: 0;
-    
 }
 
+//styles for hover
 .image-hover-title {
     margin-bottom: 7px;
     line-height: 20px;
@@ -153,11 +152,7 @@
     }
 }
 
-.single-img-btn-one {
-    margin-right: 10px;
-}
-
 .single-img-btn-three {
-    margin-left: 10px;
+    margin-left: 20px;
     margin-right: 5px;
 }
