--- a/src/scss/settings/_buttons.scss
+++ b/src/scss/settings/_buttons.scss
@@ -1,5 +1,5 @@
 
-//secondary buttons
+//secondary buttons - in cards of row, mylist and search components and in hover row
 @mixin btnsSecondary() {
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -18,7 +18,6 @@
 
     margin-top: 3px;
     margin-bottom: 5px;
-    //min-width: 50px;
 
     padding-left: 17px;
     padding-right: 17px;
@@ -28,7 +27,7 @@
     transition: background-color 0.4s ease-in-out;
 
     &:hover {
-        background-color: #5d3094; //1;#9f34c6
+        background-color: #5d3094; 
         -webkit-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.9);
         -moz-box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.9);
         box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0,0,0,0.9);
@@ -39,6 +38,6 @@
         -webkit-box-shadow: none;
         -moz-box-shadow: none;
         box-shadow: none;
-        }
+    }
 }
 
