--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -7,6 +7,8 @@
     overflow-y: scroll;
     scrollbar-width: none;
 
+    flex-grow: 1;
+
     &::-webkit-scrollbar {
         display: none;
     }
@@ -174,10 +176,14 @@
 
 .modal-description-container {
     background-color: $backgroundcolor-btns-navbar;
-    margin: 10px 0;
-    border-radius: 15px;
+    margin-top: 1rem;
+    margin-bottom: 1.3rem;
+    border-radius: 1rem;
     overflow-y: scroll;
     scrollbar-width: none;
+
+    flex-grow: 1;
+
     &::-webkit-scrollbar {
         display: none;
     }
