--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -1,40 +1,39 @@
 .search-main {
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .search-container {
-    width: 92%;
-    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    
-    margin-top: 170px;
+    align-items: center;
+    margin-top: 11rem;
+    flex-grow: 1;
 }
 
 .search-input {
    width: 100%;
-   height: 170px;
-   //padding-top: 20px;
-   margin-bottom: 40px;
+   height: 10rem;
+   padding-left: 8rem;
+   margin-bottom: 2.3rem;
 
     input {
         width: 30%;
-        height: 68px;
-        margin-left: 20px;
-
-        padding: 10px 0;
+        height: 4.25rem;
+        padding: 0.6rem 0;
         box-sizing: border-box;
 
         border: none;
         border-bottom: 2px solid white;
         background-color: $main-app-color;
 
-        font-size: 35px;
-        line-height: 50px;
+        font-size: 2rem;
+        line-height: 2.9rem;
         font-family: 'Poppins', sans-serif;
         color: whitesmoke;
 
@@ -45,7 +44,8 @@
         }
 
         @media screen and (max-width: 430px) {
-            font-size: 25px;
+            font-size: 1.5rem;
+            line-height: 2.4rem;
         }
     }
 
@@ -58,14 +58,16 @@
 }
 
 .search-results-container {
+    width: 86%;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-    justify-content: space-around;
-    //margin-right: 35px;
+    
 }
 
 .search-empty-results {
-    margin-bottom: 30px;
+    width: 100%;
+    margin-bottom: 1.8rem;
     text-align: center;
 }
 
@@ -75,5 +77,5 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
     color-scheme: dark;
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0), inset 0 0 0 100px #27282b;
-    font-size: 35px;
+    font-size: 2rem;
 }
