--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -3,10 +3,14 @@
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 25px 0;
+    padding: 26px 0;
 
     &::-webkit-scrollbar {
         display: none;
+    }
+
+    @media screen and (width <= 645px) {
+        padding: 15px 0;
     }
 }
 
@@ -17,37 +21,107 @@
 //div with image and hover
 .row-poster {
     object-fit: contain;
-    
-    height: 183px;
-    max-width: 100%;
-    
-    transition: transform 450ms;
-
+    min-height: 183px;
+    width: 100%;
+    min-width: 300px;
     border-radius: 12px;
-
     margin-right: 9px;
     margin-left: 9px;
-
+    
+    transition: transform 450ms;
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
 
     &:hover {
         transform: scale(1.06);
     }
+
+    @media screen and (width <= 645px) {
+
+        &:hover {
+            transform: none;
+        }
+    }
+
+    @media only screen and (width >= 2500px) and (width <= 3000px) {
+        margin: 0 20px;
+    }
+
+    @media only screen and (width >= 1465px) and (width <= 1720px) {
+        margin: 0 17px;
+    }
+
+    @media only screen and (width >= 1285px) and (width <= 1375px) {
+        margin: 0 17px;
+    }
+
+    @media only screen and (width >= 850px) and (width <= 1024px) {
+        margin: 0 20px;
+    }
+
+    @media only screen and (width >= 380px) and (width <= 645px) {
+        margin: 0 30px;
+    }
+
+    @media only screen and (width >= 360px) and (width <= 380px) {
+        margin: 0 20px;
+    }
+
+    @media screen and (width < 360px) {
+        margin: 0 10px;
+    }
 }
 
 //div with image and hover
 .row-posterLarge {
-    height: 475px;
+    //min-height: 475px;
+    width: 100%;
+    min-width: 290px;
     border-radius: 20px;
 
-    margin-right: 13px;
-    margin-left: 13px;
+    margin-right: 15px;
+    margin-left: 15px;
     overflow: hidden;
     position: relative;  //!!!!!!!!!!!!!!!!!!!
 
     &:hover {
-        transform: scale(1.09);
+        transform: scale(1.08);
+    }
+
+    @media screen and (width <= 645px) {
+
+        &:hover {
+            transform: none;
+        }
+    }
+
+    @media only screen and (width >= 2500px) and (width <= 3000px) {
+        margin: 0 30px;
+    }
+
+    @media only screen and (width >= 1610px) and (width <= 1720px) {
+        margin: 0 20px;
+    }
+
+    @media only screen and (width >= 1285px) and (width <= 1375px) {
+        margin: 0 20px;
+    }
+
+    @media only screen and (width >= 850px) and (width <= 1024px) {
+        margin: 0 30px;
+    }
+
+    @media only screen and (width >= 646px) and (width < 850px) {
+        margin: 0 16px;
+    }
+
+    @media only screen and (width >= 380px) and (width <= 645px) {
+        margin: 0 50px;
+        // margin-right: 60px;
+    }
+
+    @media screen and (width < 380px) {
+        margin: 0 23px ;
     }
 }
 
@@ -124,7 +198,7 @@
 
 .image-hover-overview {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 0.8rem;
     margin-top: 5px;
     margin-bottom: 5px;
     text-align: justify;
@@ -132,7 +206,7 @@
 
 .single-hover-overviewLarge {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.9rem;
     margin-top: 10px;
     margin-bottom: 15px;
     text-align: justify;
@@ -140,19 +214,16 @@
 
 .btn-div-hover {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .image-hover-btn {
+    
     @include btnsSecondary();
 
     &:disabled {
         background-color: $btn-disabled-backgroundcolor;
         //rgba(148, 146, 146, 0.716)
     }
-}
-
-.single-img-btn-three {
-    margin-left: 20px;
-    margin-right: 5px;
+    
 }
